Closed Bug 593860 Opened 15 years ago Closed 15 years ago

[D2D] Black box appearing when D3D9 enabled

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: icecold, Assigned: bas.schouten)

References

Details

Attachments

(4 files, 4 obsolete files)

User-Agent: Mozilla/5.0 (Windows NT 6.1; rv:2.0b6pre) Gecko/20100906 Firefox/4.0b6pre Build Identifier: D3D9 is enabled by default on my system. When I use Facebook chat or when I surf on some websites area becomes black. Mostly happens on Facebook. Reproducible: Always Steps to Reproduce: 1.Go to Facebook and login. 2.Open chat windows to see online friends. 3.Click on any friend to open chat windows and then black box will appear. Actual Results: Black box was next to chat window. OS: Windows 7 GPU: Nvidia 8400GS using 258.96 drivers.
Attached image Black box in chat
blocking2.0: --- → ?
Component: Layout → Graphics
QA Contact: layout → thebes
This happens a lot using firebug's inspect tool on any page. (firebug 1.7X.0a1)
(In reply to comment #2) > Could this bug be related to: > https://bugzilla.mozilla.org/show_bug.cgi?id=593219 ? no this happens without applying a persona and it's very easy to reproduce just log in facebook and open the chat, it only happens with D3D9 enabled
This is a screenshot that the reporter forgot to include http://img268.imageshack.us/i/issuef.jpg/
A reduced HTML testcase would really help
Keywords: testcase-wanted
Attached file reduced testcase
Seems to reproduce on my end (hopefully everywhere). Tried out some things (interactivity, scrolling, multiple examples) but the effect was a bit erratic. Goes away if I take the background-color off.
I can reproduce this both with D2D and D3D. I'm assuming this is about the small black rectangular areas at the sides of the DIVs.
Assignee: nobody → bas.schouten
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment on attachment 472516 [details] reduced testcase Interesting. In the attachment edit window, the testcase is displayed well. If i simply open the attachemnt, there arem some black areas. (w/ D2D and layers ON)
Attached patch Draw only VisibleRegion (obsolete) — Splinter Review
This causes us to draw only the visible region for our ThebesLayers.
Attachment #472759 - Flags: review?(jmuizelaar)
Comment on attachment 472759 [details] [diff] [review] Draw only VisibleRegion > outp.vPosition = mul(mProjection, outp.vPosition); > >- outp.vTexCoords = aVertex.vPosition.xy; >+ outp.vTexCoords.x = vTextureCoords.x + aVertex.vPosition.x * vTextureCoords.z; >+ outp.vTexCoords.y = vTextureCoords.y + aVertex.vPosition.y * vTextureCoords.w; This would be cleaner if texture coords were vertex attributes instead of implicitly selecting texture coordinates using multiplication by 0 or 1. I know you prefer these tricks, but I'm not sure the performance gain is worth it. If you can show a measurable difference I'd be more easily convinced.
Attached patch Draw only VisibleRegion v2 (obsolete) — Splinter Review
Adjusted to make our creating a rectangle through the shaders approach better documented. If you agree with this approach Jeff, I'll move our Quad stuff to use the same helpers and approach. I've also reduced validation to draw only the visible region, we no longer need to draw the bounds.
Attachment #472759 - Attachment is obsolete: true
Attachment #472804 - Flags: review?(jmuizelaar)
Attachment #472759 - Flags: review?(jmuizelaar)
Attached patch Draw only VisibleRegion v3 (obsolete) — Splinter Review
Attachment #472804 - Attachment is obsolete: true
Attachment #472887 - Flags: review?(jmuizelaar)
Attachment #472804 - Flags: review?(jmuizelaar)
Attached patch Draw only VisibleRegion v4 (obsolete) — Splinter Review
Attachment #472887 - Attachment is obsolete: true
Attachment #472898 - Flags: review?(jmuizelaar)
Attachment #472887 - Flags: review?(jmuizelaar)
Attachment #472898 - Attachment is obsolete: true
Attachment #472900 - Flags: review?(jmuizelaar)
Attachment #472898 - Flags: review?(jmuizelaar)
Attachment #472900 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Using http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-central-win32/1283919660/ which is supposed to have this fix , the bug is only fixed for the test case but not for the facebook chat. I still have the black box like in the screenshot attached to this bug
Same for me. If i hit Ctrl+T, the black box disappears.
I'm not in the same PC right now, but it seems to have solved it for me.
I can also confirm that issue on provided screenshot is not fixed. It's still happening. Just do the STR.
(In reply to comment #21) > I can also confirm that issue on provided screenshot is not fixed. It's still > happening. Just do the STR. Considering I don't have a facebook account, that's going to be tricky :). I indeed fixed the testcase. Turns out the testcase is another bug I suppose :-). Can anyone point me at any other, public, site which has this bug.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
(In reply to comment #22) > Considering I don't have a facebook account, that's going to be tricky :). I > indeed fixed the testcase. Turns out the testcase is another bug I suppose :-). > Can anyone point me at any other, public, site which has this bug. Sadly but I haven't found a site that has this bug. I actually did, but on that site it happened randomly with no STR and sometimes it could take 15 minutes. So staring at text you don't understand and waiting is worse than making a Facebook profile :D Or if someone has a site with this bug. Btw. you can make fake profile :D
I think I've found one. You should try going to this site: http://www.clubic.com/moteur-de-recherche/actualite-363754-google-instant-recherche-instantanee.html and click on a picture.
To reproduce the issue click "toggle second TD" twice.. I added "toggle first TD" to the testcase because it seemed to me that its behavior was quirky (another bug?). Also, if the first TD is hidden the original issue doesn't reproduce.
(In reply to comment #24) At first glance it doesn't look like it's the same issue, at least not the one on my second try. :)
Confirmed, I can reproduce issues with the new test case.
Only occurs with D2D.
Summary: Black box appearing when D3D9 enabled → [D2D] Black box appearing when D3D9 enabled
I also looked into the issue reported by Thomas in #24 but not believing it's the same thing I avoided attaching a testcase and instead uploaded it here: http://www.mediafire.com/?2q36m9nyuf63buy (sorry, couldn't think of anywhere else to put it) Clicking twice makes the transparent div appear dark and selecting the text inside it creates a nice gradient effect. :) Apparently it's trying to blend with black instead of the background color (white).
The latest test case is caused by by bug 594624. There's a patch on that bug.
Depends on: 594624
This is bug 594624 now. We should have a reftest here, by the way.
Status: REOPENED → RESOLVED
Closed: 15 years ago15 years ago
Resolution: --- → FIXED
Let's hope this is finally fixed with the fixing of bug 594624!
confirming fixed
Excellent! Thanks.
We really do need a reftest for this.
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: