Bug 593860: Only render parts of a layer in the visible region. r=jrmuizel a=blocking-betaN